# Agentic-J

./: .dockerignore  .env.template  .gitattributes  .gitignore  DOCKER_MANUAL.md  Dockerfile  LICENSE  NOTICE  README.md  agents.py  container_snapshot_2026-04-30.md  docker-compose.yml  docker-entrypoint.sh  environment.yml  gui_runner.py  micromamba_shim.sh  prompts.py  pyproject.toml  run.py  setup_wizard.py  tools.py
RAG/: RAG.py  loaders.py
data/environment/: container_snapshot.md
data/sem_inputs/: Mat1-TUK-3lay-190424_10kx_01.tif  Mat1-TUK-3lay-190424_10kx_03.tif  Mat1-TUK-3lay-190424_10kx_05.tif
docs/: DEPLOY.md  README.md  SCREENSHOTS.md  index.html
docs/css/: styles.css
docs/js/: main.js
qdrant_data/: meta.json
skills/3d_imagej_suite_documentation/: GROOVY_WORKFLOW_3D_FAST_FILTER.groovy  GROOVY_WORKFLOW_3D_MEASURE_LABEL_IMAGE.groovy  GROOVY_WORKFLOW_3D_NUCLEI_SEGMENTATION.groovy  GROOVY_WORKFLOW_3D_SEGMENT_AND_MEASURE.groovy  GROOVY_WORKFLOW_3D_SPOT_SEGMENTATION.groovy  GROOVY_WORKFLOW_3D_WATERSHED.groovy  OVERVIEW.md  SCRIPT_API.md  SKILL.md  UI_GUIDE.md  UI_WORKFLOW_3D_SEGMENT_AND_MEASURE.md
skills/bigstitcher_documentation/: GROOVY_SCRIPT_API.md  OVERVIEW.md  SKILL.md  UI_GUIDE.md  UI_WORKFLOW_STITCHING.md  WORKFLOW_TILE_STITCHING.groovy
skills/bioimageformat_documentation/: GROOVY_SCRIPT_API.md  OVERVIEW.md  SKILL.md  UI_GUIDE.md  UI_WORKFLOW.md  WORKFLOW_BATCH_CONVERT.groovy
skills/bunwarpj_documentation/: GROOVY_API.md
skills/coloc2_documentation/: GROOVY_WORKFLOW.groovy  SKILL.md
user_guide/: 01_getting_started.md  02_interface_and_agents.md  03_prompting.md  04_data_history_and_reports.md  05_security.md  README.md
website/: index.html
(+156 files in other folders)
