[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imagentj"
version = "0.1.0"
description = "AI-powered agent for ImageJ/Fiji scripting and bioimage analysis."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "ISAS e.V.", email = "agentj.help@gmail.com" },
]
keywords = ["imagej", "fiji", "bioimage", "agent", "llm"]
# Runtime dependencies are managed via environment.yml (conda + pip).
# This block stays empty so that `pip install .` does not try to resolve
# them from PyPI alone.
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[tool.setuptools.packages.find]
where = ["src"]
